# subnet-garden

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: pre-commit.yaml  release-pr.yaml  release.yaml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: lib.rs
cli/tests/: main.rs  main_test.rs  test.rs
cli/tests/fixture/: mod.rs
cli/tests/subcommands/: init.rs  listing.rs  mod.rs  subnet.rs
cli/tests/test/: mod.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: errors.rs  format_str.rs  garden.rs  lib.rs  library.rs  memory.rs  model.rs  param_str.rs  pool.rs  space.rs  subspace.rs  util.rs
core/src/format_str/: parser.rs
core/src/garden/: tests.rs
core/src/memory/: space.rs  subspace.rs  tests.rs  util.rs
core/src/memory/space/: tests.rs
core/src/param_str/: format.rs
core/src/param_str/format/: parser.rs
core/src/pool/: tests.rs
core/src/space/: tests.rs
examples/terraform/: example.tf  outputs.tf  providers.tf  subnet-garden-pool.yaml
examples/terraform/subgpool/: main.tf  outputs.tf  variables.tf
