# Copyright 2023-2024 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[workspace]

members = [
    "cli",
    "core",
]
resolver = "2"

[workspace.package]
authors = ["The Milton Hirsch Institute, B.V."]
edition = "2021"
keywords = [
    "subnet",
    "cidr",
    "cidr-blocks",
]
license = "Apache-2.0"
documentation = "https://github.com/milton-hirsch-institute/subnet-garden/blob/main/README.md"
homepage = "https://github.com/milton-hirsch-institute/subnet-garden"
repository = "https://github.com/milton-hirsch-institute/subnet-garden"
version = "0.2.1"
