# Copyright 2023-2024 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "subg"
authors = ["The Milton Hirsch Institute, B.V."]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "subg"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "^0.2"
clap = { version="^4", features = ["cargo", "derive", "env"] }
exitcode = "^1"
subnet-garden-core = { path = "../core", version="^0.1" }
serde_json = "^1"
serde_yaml = "^0.9"

[dev-dependencies]
assert_cmd = "^2"
assert_fs = "^1"
predicates = "^3"
