# Copyright 2023-2024 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "subg"
version.workspace = true
description = "Command line interface for managing IPv4 and IPv6 subnets"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[[bin]]
name = "subg"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cidr = "^0.2"
clap = { version="^4", features = ["cargo", "derive", "env"] }
exitcode = "^1"
subnet-garden-core = { path = "../core", version="^0.3" }
serde_json = "^1"
serde_yaml = "^0.9"
log = "0.4.20"

[dev-dependencies]
assert_cmd = "^2"
assert_fs = "^1"
predicates = "^3"
