# Copyright 2023 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "subnet-garden-core"
authors = ["The Milton Hirsch Institute, B.V."]
version = "0.1.0"
edition = "2021"

[dependencies]
cidr = "^0.2"
cidr-utils = "^0.6"
serde = { version="^1", features = ["derive"] }

[dev-dependencies]
grcov = "^0.8"
itertools = "^0.12"
postcard = "^1"
serde_json = "^1"
