# Copyright 2023-2024 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "subnet-garden-core"
version.workspace = true
description = "A library for managing IPv4 and IPv6 subnets"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
cidr = "^0.2"
cidr-utils = "^0.6"
serde = { version="^1", features = ["derive"] }

[dev-dependencies]
grcov = "^0.8"
itertools = "^0.12"
postcard = "^1"
serde_test = "^1"
